...
import LoadingPopup from '../components/popups/LoadingPopup';
import {WEEKLY_READING_TABLE_NAME, useUpdate} from '../logic/general';
import ScheduleTypeSelectionPopup from '../components/popups/ScheduleTypeSelectionPopup';
import {translate} from '../logic/localization/localization';

let scheduleType;
const pageTitle = 'schedulesPage';

export default function Schedules(props) {
  log('loaded schedules page');
  const navigation = props.navigation;
  const globalState = useContext(store);

...
