...
    "whereWritten": "写作地点",
    "whenWritten": "成书时间",
    "writers": "执笔者"
  },
  "readingSchedules": "阅读进度表",
  "schedules": "进度表",
  "schedulePage": {
    "deleteScheduleMessage": "请确认你想删除叫 “{{scheduleName}}” 的进度表?",
    "hideCompleted": "隐藏完成的"
  },
  "scheduleTransactions": {
    "adjustedVersePrompt": "开头经文因为你请求的经文超过界限了从你请求的经文 “{{initialBibleBook}} {{initialChapter}}:{{initialVerse}}” 被改到最进的经文 “{{startBibleBook}} {{startChapter}}:{{startVerse}}”",
    "scheduleNameTakenPrompt": "这个进度表题目已经运用了请选择还没用的题目"
...
